Update and rename 220830_TIL.md to 220829~220831_TIL.md
[멋쟁이사자처럼 프론트엔드 스쿨 3기] 과정에서 22.08.29.~22.08.31 동안 학습한 것을 회고한 내용입니다.

--- a/22.08.29.~22.08.31/220829~220831_TIL.md
+++ b/22.08.29.~22.08.31/220829~220831_TIL.md
@@ -1,11 +1,12 @@
 # [학습 기록] 22.08.29.~22.08.31. TIL
 
+
 ## ❗ What's new (오늘은 이런 걸 새로 배우고 느꼈어요)
 
 ### ▪ HTML
 
 - **코드 스니펫** 기능을 배우고 나서 훨씬 더 편리하게 HTML을 사용할 수 있게 되었다.
-- **시멘틱한 HTML**이 무엇인지 배웠다. 좋은 코드가 뭔지 생각하고 코드를 치는 개발자가 되고 싶다고 생각했다.
+- **시멘틱한 HTML**이 무엇인지 배웠다. 항상 효율성과 접근성을 함께 고민해서, 좋은 코드가 뭔지 생각하고 코드를 치는 개발자가 되고 싶다고 생각했다.
 - HTML의 **elements**들에 대해 배웠다. 각각의 요소들에 대해서는 이미 공부했던 내용인데도 깊게 들어가서, 비슷하지만 쓰임이 다른 요소들을 비교하며 공부할 때 새로운 공부를 하는 기분이 들었다. 시멘틱한 HTML을 고수하는 것과 호환성 문제를 해결하는 것이 상충할 수 있으나, 이를 적절히 해결해나가는 게 중요하겠다고 생각했다. 더 좋은 코드를 생각해낼 수 있을 만큼 더 깊이 학습을 하고 싶다.
 - HTML의 elements들로 **페이지 레이아웃**을 나눠보는 실습을 했다. 이젠 실제 자주 보는 웹 페이지들을 보며 이건 어떤 태그로 만들어졌을까 상상하고는 한다. 많이 보고 많이 생각해보면서 시야를 넓혀야겠다는 생각을 했다.
 
@@ -30,6 +31,7 @@
 ---
 
 ## ❓ What's next (앞으로 이런 걸 할 예정이에요)
+
 
 ### ▪ HTML
 
