--- a/22.09.05/220905_TIL.md
+++ b/22.09.05/220905_TIL.md
@@ -2,7 +2,7 @@
 
 ## ❗ What's new (오늘은 이런 걸 새로 배우고 느꼈어요)
 
-### ▪ **'피드백 주도 성장'**의 중요성
+### ▪ '피드백 주도 성장'의 중요성
 
 - **더 자주, 더 빨리, 더 꾸준히** 받을 수 있는 **피드백**이 중요하다. 즉각적인 피드백이 있으면 전문성을 기르는 데에 도움이 많이 된다.
 
