--- a/22.09.07/220907_TIL.md
+++ b/22.09.07/220907_TIL.md
@@ -92,6 +92,7 @@ poster 속성으로 영상이 로딩 중일 때 화면에 보여줄 이미지를
   </fieldset>
 </form>
 ```
+- `<table>` 태그의 `<th>` 요소에 **scope 속성**을 사용해 `<td>`와의 연결 관계를 설정할 수 있다. 스크린 리더기에서 읽을 방향을 지정해주는 역할을 한다.
 
 ---
 
