--- a/22.09.07/220907_TIL.md
+++ b/22.09.07/220907_TIL.md
@@ -2,7 +2,7 @@
 
 ## ❗ What's new (오늘은 이런 걸 새로 배우고 느꼈어요)
 
-### ▪ HTML (Embedded-contents & Forms)
+### ▪ HTML (Embedded-contents & Forms & Tabular data)
 
 **[새로 알게 된 내용]**
 
