--- a/22.09.08/220908_TIL.md
+++ b/22.09.08/220908_TIL.md
@@ -22,6 +22,8 @@
 - nomalize.css는 기본 속성을 모두 제거하는 대신 브라우저 스타일 기반에 스타일을 첨가하는 것이다.(좀 더 부드러운 방법) 어떤 브라우저든 비슷한 화면으로 보이도록 한다. 요즘 가장 많이 쓰이고 있는 reset CSS이다.
 - Vendor-Prefix는 아직 비표준이거나 실험적인 CSS속성을 특정 브라우저에서 실행할 수 있도록 CSS 속성 앞에 브라우저 제조사 별 접두어(Prefix)를 붙이는 문법이다. (예시 : `-moz-transition: all 4s ease;`) 현재 시점에서 벤더 프리픽스는 줄어들고 있는 추세이다. 크로스 브라우징을 위해 필요한 문법이다.
 - Webkit은 브라우저가 HTML, CSS를 화면에 그려줄 때 사용하는 렌더링 엔진이다. 
+- 박스의 성질을 지정해 다른 박스들과 어떤 방식으로 위치가 배치될지를 결정하는 것이 display 속성이다. 외부 디스플레이 타입에는 inline, block, inline-block이 있고, 내부 디스플레이 타입에는 flex와 grid가 있다.  
+- 인라인 요소는 높이 너비를 조절할 수 없지만 예외적으로 img는 가능하다.
 
 ---
 
@@ -35,3 +37,35 @@
 - background-image로 이미지를 넣는 경우는, 변경되지 않을 것이고 백엔드 입장에서 컨트롤하지 않아도 되는 이미지이다. 그 반대의 경우에는 img요소를 사용하면 된다.
 - id 속성을 사용할 때는 한 페이지에 단 한 개만 존재하도록 해야한다.
 - id 속성을 이용하면 `<a>`요소의 href 속성과 연결해 다른 페이지로 이동하는 링크가 아닌 현재 페이지에서 이동하는 해쉬 링크를 만들 수 있다.
+- 선택자 우선순위에서 자리올림이 되지는 않는다. (태그로 13점을 얻어도 클래스가 가지는 10점을 넘지 못한다.)
+- CSS Box Model에서 블록 박스는 가용공간을 양 옆으로 100% 사용하고 사용하지 못하는 공간은 마진 영역으로 채운다. 인라인 박스는 컨텐츠 박스만큼의 크기만 가지며 높이와 넓이를 설정할 수 없다.
+
+---
+
+### 🌞 오늘 마음에 남은 말 & 하루 끝 회고
+
+- "잘 하고 있는 걸까?"에 대한 답을 알 수 있는 것은 **어제보다 나아진 것, 그리고 지금 내가 여기(이 수업에) 있는 것**이라고 말씀해 주신 게 기억에 남았다. 
+- 이런 응원의 말씀이 참 힘이 된다. 그저 앉아 있는 것 말고 항상 깨어 있는 상태로 수업 듣고 내 뇌에 저장까지 완전히 하도록 노력해야겠다.
+
+---
+
+## ❓ What's next (앞으로 이런 걸 할 예정이에요)
+
+### ▪ HTML & CSS
+
+- 과제 계속 발전시키기 (코드 리뷰 후 개선점 수정)
+
+### ▪ Git & GitHub
+
+- TIL과 실습 내용을 업로드하기
+- 사용하지 않았던 기능들도 공부해보기
+
+### ▪ JavaScript
+
+- '모던 자바스크립트 Deep Dive' 책 학습하기
+
+### ▪ Personal
+
+- 커피는 하루에 한 잔만 마시기
+- 집중력을 위해 주변정돈 열심히 하기
+- 체력 증진을 위해 저녁 달리기 하기
