9월 3주차 회고
[멋쟁이사자처럼 프론트엔드 스쿨 3기]에서 22.09.13.~22.09.16. 일주일 동안 학습한 것을 회고한 내용입니다.

--- a/22.09.13.~22.09.16/220913-220916_TIL.md
+++ b/22.09.13.~22.09.16/220913-220916_TIL.md
@@ -12,6 +12,57 @@
     4. 부모 요소에 display 속성으로 flow-root을 사용 (IE는 지원이 불가함)
 - `vertical-align: baseline;`은 부모의 베이스라인에 맞춰 정렬하는 것이다. vertical-align은 img태그의 바깥쪽 공백을 없애기 위해 자주 사용한다. 이미지도 인라인 요소이기 때문에 이 속성에 영형을 받는다.
 - z-index를 사용할 때 자식 요소가 부모를 기준으로 더 높이 위치하는 것은 가능하지만 부모가 z-index를 높여 자식을 넘어 가는 것은 불가하다.
+- 속성 선택자의 다양한 종류를 배웠다.
+```css
+/*속성 선택자 종류와 예시*/
+a[href] {
+	font-size: 10px;
+} /*속성이름에 해당하는 속성을 가진 태그를 모두 선택한다.*/
+
+a[href="http://www.paullab.co.kr"] {
+    font-size: 32px;
+} /*속성이름의 속성값이 변수와 일치하는 태그를 선택한다.*/
+
+a[href="http://www.paullab.co.kr"] {
+    font-size: 32px;
+} /*속성이름의 속성값 중에 변수를 하나의 완전한 단어로 포함하는 태그를 선택한다.*/
+
+a[href^="http"] {
+    color: black;
+} /*속성의 속성값이 변수로 시작되는 태그를 선택한다.*/
+
+a[href$="kr"]{
+    color: black;
+}
+
+a[href$=".pdf"]{
+    color: black;
+} /*속성의 속성값이 변수로 끝나는 요소를 선택한다.*/
+
+a[href$="kr"]{
+    color: black;
+}
+
+a[href$=".pdf"]{
+    color: black;
+} /*속성의 속성값이 변수를 포함하는 태그를 선택한다.*/
+
+a[href|="http"]{
+    color: black;
+} /*속성의 속성값이 변수이거나 변수로 시작하면서 뒤에 바로 하이픈 기호가 있는 태그를 선택한다.*/
+```
+- **가상 클래스 선택자**는 클래스가 없는데 있는 것처럼 처리하는 것이고 콜론이 한 개 있다.(:hover 등) **가상 요소 선택자**는 요소가 없는데 있는 것처럼 처리하는 것이고 콜론이 두 개 있다.(::before 등)
+- 가상 클래스 선택자 중 :visited는 개인정보 보호를 위해 매우 제한적으로 사용된다.
+- **flex**는 메뉴를 만들 때 자주 쓰인다. 화면을 줄여도 간격 비율이 같이 일정하게 유지되며 줄어들기 때문이다. flex-container는 기본적으로 주축(Axis)을 가지며 왼쪽에서 오른쪽을 향하는 게 기본 방향이다. justify-content를 사용해 주축을 기준으로 배열의 위치를 조종하거나 아이템 간의 간격을 설정할 수 있다. 
+- flex를 사용할 때 align-items 속성은 cross-axis를 기준으로 이동하는 것이다. align-content는 flex-container의 cross-axis축의 아이템들이 여러 줄일 때 사용가능하기 때문에 두 줄의 flex-wrap:wrap인 상태에서 사용해야 한다. flex-wrap은 자식 요소를 감싸서 부모의 넓이에 따라 자식들을 줄바꿈하도록 하는 기능이다. 
+```css
+/*flex-direction과 flex-wrap의 단축 사용법*/
+.container {
+  display: flex;
+	flex-flow: wrap column; 
+	/* flex-wrap: wrap; flex-direction: column; 과 동일하다. */
+}
+```
 
 ---
 
@@ -22,3 +73,41 @@
 - `vertical-align:middle;` 을 쓴다고 해도 바로 가운데에 있지는 않은 이유는 폰트의 중간 위치가 아닌 부모 높이의 절반 위치에 가는 것이기 때문이다.
 - background-image를 사용할 때의 다양한 속성도 학습했다. 이전에는 배경 이미지를 넣는 정도만 할 줄 알았다면 이미지를 잘라내거나 높이를 맞추거나 압축하는 등의 속성도 사용할 수 있게 되었다. 
 - #ffffff 처럼 색상을 표기하는 방식이 HEX값(16진수)이라는 걸 알게 되었다. ~~(예전에 디자인 공부했던 사람 맞나..ㅎㅎ 하는 생각에 창피했다)~~  6자리 코드가 각각 2자리씩 빨간색, 녹색, 파란색에 대한 값을 표현한 것이라고 한다. 빨간색은 #FF0000, 보라색은 #800080인데, 원리를 알고 나니 재밌다!  
+- **float** 속성은 블록 박스 요소를 정렬할 때 많이 사용한다. float된 요소들의 넓이의 합이 감싸고 있는 컨테이너의 넓이보다 커지면 순차적으로 아래로 떨어진다. inline요소에 float속성을 적용하면 display 속성값이 자동으로 block으로 바뀌게 되어서 width, height, margin, padding 속성값을 사용할 수 있다. 
+- 자식 요소들이 모두 float 속성을 가질 때 컨테이너 요소가 자신의 높이에 자식 요소들의 높이를 반영하지 못한다. 이때는 부모 요소에 overflow 속성을 추가하거나, 부모 요소의 높이 값을 직접 지정하거나 clear 속성을 사용하거나, CSS의 ::after 가상요소로 clear-fix해 내부 외부 float을 해제하고 마진 병합 현상을 막아 이 문제를 해결할 수 있다.
+
+---
+
+## 💬 1주차 주간 회고
+
+### ▪ 수업에 대해서
+
+- 1주차에는 갑자기 달라진 생활패턴, 수업에 적응하기 바빴다. 2주차에는 수업방식에는 적응을 했으나 과제 일정에 맞춰 학습도 진행하는 데에 적응하는 게 관건이었다. 지난 3주차에는 슬슬 동료분들과 스터디 진행을 시작하게 되면서 새로운 적응을 해야 할 일들이 늘었다. 이제 다가온 4주차에는 이러한 변화들에까지 적응을 마치고 내 앞에 주어진 것들을 잘 소화해 낼 수 있기를 소망한다. 
+- 마지막날인 금요일에는 선배님 특강과 전문가 특강이 있었다. 이전 기수를 수료하신 선배님께는 같은 입장이 되어보셨던 분에게 현실적이고 내가 바로 적용할 수 있는 부분의 도움을 많이 받았다. 동기분들과의 의사소통과 협업에 대한 경험담을 듣고 내가 취해야 할 태도에 대해 다시 한 번 생각해봤다. 공부 방법에서도 서로 가르쳐 주며 오히려 배우는 문화에 대해 듣게 되었고, ~~생각해보면 고등학생 때도 필통에 연예인 사진을 붙여놓고 가르치는 흉내를 내며 공부할 때 성적이 제일 잘 나왔었다.~~ 전문가 분들의 특강에서는 지금 현재 너머의 인사이트를 얻은 것 같다. 개발자가 걸어야 할 방향에 대해 이야기를 듣기도 했고, 해외취업에 대한 이야기도 들으면서 내가 가야할 방향에 대해 다시 한 번 생각하는 계기가 되었다.
+
+### ▪ 성장 회고🥕 (당근 먹고 더 성장할게요)
+
+- 동료분들과의 소통에 더 적극적으로 임하려고 노력했다. 성격대로 낯을 가리며 쭈뼛대기에 4개월이라는 시간이 너무 짧다는 생각이 들었다. 물론 앞으로 더 노력이 필요하고, 동료분들께서 내게 도움 주시는 만큼 나도 도움이 되는 동료가 되려면 아직 많은 공부가 필요하다고 느끼고 있다. 
+
+### ▪ 반성 회고🔨 (이런 건 뚱땅뚱땅 고쳐볼게요)
+
+- 3주차에는 생활패턴에는 완전히 적응해 2주차 회고 때 고치겠다고 한 '대충 먹게 되는 습관'은 어느정도 고쳐지게 되었다. 하지만 개인 시간 관리에는 아직 개선할 점이 많이 보이는 것 같다. 한달도 채 남지 않은 자격증 시험 준비와, 이제부터 시작될 여러 스터디 일정과 수업 과제 일정을 함께 소화하려면 하루를 48시간처럼~~은 약간 비약이지만 적어도 24시간이라는 시간이 아깝지 않도록~~ 건설적으로 사용할 수 있어야겠다.
+
+---
+
+## ❓ What's next (앞으로 이런 걸 할 예정이에요)
+
+### ▪ HTML & CSS
+
+- 과제 코드 리뷰를 통해 내 코드의 개선할 점 알아가기
+- 숲을 보고 나무를 보는 연습하기
+- 본격적인 자바스크립트 수업을 나가기 전에 이제껏 배운 내용 모두 복기하기
+
+### ▪ JavaScript
+
+- '모던 자바스크립트 Deep Dive', '코어 자바스크립트' 책 학습하기 
+
+### ▪ Personal
+
+- 매일 20분 이상 운동하기
+- 일의 우선순위를 머리로 그리는 연습하기
